[package]
name = "jinja2"
version = "0.1.0"
edition = "2021"
description = "A Jinja2-compatible template engine for Rust with full feature parity, built on minijinja"
license = "Apache-2.0"
repository = "https://github.com/rsyi/jinja2"
homepage = "https://github.com/rsyi/jinja2"
keywords = ["jinja", "jinja2", "templates", "template-engine"]
categories = ["template-engine"]
readme = "README.md"
exclude = ["minijinja/", ".claude/"]

[dependencies]
minijinja = { version = "2.19", features = [
    "builtins",
    "debug",
    "deserialization",
    "macros",
    "multi_template",
    "adjacent_loop_items",
    "std_collections",
    "serde",
    "loader",
    "json",
    "urlencode",
    "loop_controls",
    "unicode",
    "fuel",
    "preserve_order",
    "custom_syntax",
    "speedups",
] }
minijinja-contrib = { version = "2.19", features = [
    "pycompat",
    "rand",
    "wordcount",
    "wordwrap",
    "html_entities",
] }
indexmap = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
similar-asserts = "1.4"
